Fix expand/collapse icons for first load

--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -7,7 +7,7 @@
 
 <div class="container portal_section">
     <div class="row section_header">
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <a data-toggle="collapse" href="#dispatch_collapse" role="button" aria-expanded="true" aria-controls="#dispatch_collapse">
                     <h3 class="pull-left section_title">Dispatch Sample</h3>
                     <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
@@ -33,7 +33,7 @@
 <div class="container portal_section">
     <div class="row section_header">
 
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                 <a data-toggle="collapse" href="#receive_collapse" role="button" aria-expanded="true" aria-controls="#receive_collapse">
                     <h3 class="pull-left section_title">Receive Sample</h3>
                     <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
@@ -58,7 +58,7 @@
 
 <div class="container portal_section">
     <div class="row section_header">
-        <div class="col-xs-12 col-sm-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <a data-toggle="collapse" href="#results_collapse" role="button" aria-expanded="true" aria-controls="#results_collapse">
                 <h3 class="pull-left section_title">Upload Results</h3>
                 <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
@@ -113,7 +113,7 @@
 <div class="container portal_section">
     <div class="row section_header">
 
-        <div class="col-xs-12 col-sm-4 ">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <a data-toggle="collapse" href="#archive_collapse" role="button" aria-expanded="true" aria-controls="#archive_collapse">
                 <h3 class="pull-left section_title">Sample Archive</h3>
                 <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
