--- a/samples/templates/yourportal.html
+++ b/samples/templates/yourportal.html
@@ -3,8 +3,8 @@
 <p>{{ user.email }}</p>
 
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+    <div class="row section_header">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 ">
             <a data-toggle="collapse" href="#submit_collapse" role="button" aria-expanded="true" aria-controls="#submit_collapse">
                     <h3 class="pull-left section_title">Submit Sample Details</h3>
                     <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
@@ -28,7 +28,7 @@
     </div>
 
 <div class="container">
-    <div class="row">
+    <div class="row section_header">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <a data-toggle="collapse" href="#completed_collapse" role="button" aria-expanded="true" aria-controls="#completed_collapse">
                     <h3 class="pull-left section_title">Completed Samples</h3>
@@ -93,7 +93,7 @@
     </div>
 
 <div class="container">
-    <div class="row">
+    <div class="row section_header">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
             <a data-toggle="collapse" href="#processing_collapse" role="button" aria-expanded="true" aria-controls="#processing_collapse">
                     <h3 class="pull-left section_title">Processing Samples</h3>
