New getLocation function - deploying for testing

--- a/samples/templates/submitdetails.html
+++ b/samples/templates/submitdetails.html
@@ -6,7 +6,7 @@
 
 <h3>Submit Details: {{ sample.sample_ref }}</h3>
 <div id="default_info"></div>
-
+<input id="clickMe" type="button" value="clickme" onclick="useCurrentPos();" />
 <form role="form" method="post" id="" action="{% url 'submit' sample.id %}">
     {% csrf_token %}
     <div class="form-group col-md-6">
