--- a/samples/templates/submitdetails.html
+++ b/samples/templates/submitdetails.html
@@ -56,6 +56,7 @@
                 </ol>
                 <p>For all options you can drag and drop the marker for more accurate positioning</p>
                 <input id="useDeviceLoc" class="btn btn-primary" type="button" value="Use Device Location" onclick="useCurrentPos();" />
+                <div id="geo_error_msg"></div>
             </div>
             <div class="">
                 {{ details_form.sample_location }}
