--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -17,6 +18,9 @@
 <body>
     <!-- Fixed masthead -->
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom">
+        <div class="container nav_bg_container">
+            <img id="nav_bg" src="{% static 'img/News-Header-1b.jpg' %}" alt="header" />
+        </div>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -25,7 +29,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"> <img id="logo" src="{% static 'img/logo.jpg' %}" alt="logo"></a>
+                <a class="navbar-brand" href="/">
+                    Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
+                </a>
+            </div>
+            <div class="header_contact">
+                <a href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
+                <a class="phone_link"href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
