Include home page seperate from about

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
                 </a>
             </div>
             <div class="header_contact">
-                <a href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
-                <a class="phone_link"href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
+                <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
+                <a Target=”_blank” class="phone_link"href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
