--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,6 +4,13 @@ html, body {
 
 
 
+.home_bg {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    position: absolute;
+}
+
 body {
     font-family: Arial;
     padding-top: 80px;
@@ -32,13 +39,21 @@ body {
 
 nav {
     height: 80px;
-    color:#5e0909;
+    color: #5e0909;
+    background-color: transparent !important;
+    background-image: none;
+}
+
+.navbar {
+    background-color: transparent !important;
+    background-image: none;
+    border:none;
 }
 
 
 .navbar-default .navbar-brand {
     color: #282828;
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
 
 .logo_leaf {
@@ -66,19 +81,17 @@ nav {
     }
 
 
-
-
-    .navbar-default .navbar-nav > li > a {
-        color: #282828;
-        font-family: 'Overpass', sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1;
-    }
-    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-        color: #328008;
-        background-color: transparent;
-    }
+.navbar-default .navbar-nav > li > a {
+    color: #282828;
+    font-family: 'Overpass', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #328008;
+    background-color: transparent;
+}
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
     background-color: #328008;
@@ -91,8 +104,7 @@ nav {
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: #818108;
-
+    border:none;
 }
 
 .navbar-collapse.in {
@@ -245,4 +257,8 @@ table {
 
 #useDeviceLoc{
     margin-bottom:5px;
+}
+
+.home_main {
+
 }
