--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -11,73 +11,83 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
-<body>
-    <!-- Fixed masthead -->
-    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">
-                    Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
-                </a>
-            </div>
-            <div class="header_contact">
-                <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
-                <a Target=”_blank” class="phone_link"href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'index' %}"><i class="fas fa-info"></i> About</a></li>
-                    <li><a href="{% url 'products' %}"><i class="fab fa-product-hunt"></i> Services</a></li>
-                    {% if user.is_authenticated %}
-                    {% if user.is_staff %}
-                    <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
-                    {% endif %}
-                    <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
-                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
-                    {%  else %}
-                    <li><a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i> Log In</a></li>
-                    {% endif %}
-                    <li>
-                        <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shopping-cart"></i> Cart
-                            {% if product_count > 0 %}
-                            <label class="bade badge-warning">{{ product_count }}</label>
-                            {% endif %}
-                        </a>
-                    </li>
-                </ul>
-            </div>
+<body class="home_bg" style="background-image: url('{% static "img/Slide1.jpg" %}')">
+<nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
+            </a>
         </div>
-    </nav>
+        <div class="header_contact">
+            <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
+            <a Target=”_blank” class="phone_link" href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'about' %}"> <i class="fas fa-info"></i>  About</a></li>
+                <li><a href="{% url 'products' %}"><i class="fas fa-vial"></i> Services</a></li>
+                {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
+                {% endif %}
+                <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
+                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
+                {%  else %}
+                <li><a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i> Log In</a></li>
+                {% endif %}
+                <li>
+                    <a href="{% url 'view_cart' %}">
+                        <i class="fa fa-shopping-cart"></i> Cart
+                        {% if product_count > 0 %}
+                        <label class="bade badge-warning">{{ product_count }}</label>
+                        {% endif %}
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     {% if messages %}
-    <div class="alert alert-success">
-        <div class="messages">
-            {% for message in messages %}
-            {{ message }}
-            {% endfor %}
-        </div>
+<div class="alert alert-success">
+    <div class="messages">
+        {% for message in messages %}
+        {{ message }}
+        {% endfor %}
     </div>
+</div>
     {% endif %}
-    <div class="container main_container">
-        {% block content %} {% endblock %}
-    </div>
-    <footer>
-        <div class="container">
-            <p>Developed by Dan Casey</p>
+<div class="container main_container">
+    <div class="row">
+        <div class="home_info col-sm-10 col-md-6 col-lg-5">
+            <p class="home_quote">
+                Simplifing Your Soil Sampling Needs.... <br /><span class="home_quote_2">
+                    ......Securing Our Sustainble Future!
+                </span>
+            </p>
+            <p>Check out our suite of sampleing options and see how we can make your life easier.</p>
+            <a href="{% url 'products' %}"><button class="btn btn-success soil_options_btn" type="button">Soil Test Options</button></a>
         </div>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+    </div>
+</div>
+<footer>
+    <div class="container">
+        <p>Developed by <a class="LinkedInLink" href="https://www.linkedin.com/in/danielcaseyengineer/" target="_blank"><i class="fab fa-linkedin"></i> Dan Casey</a></p>
+    </div>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 </body>
 </html>
