--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,13 +3,46 @@ html, body {
 }
 
 
-
 .home_bg {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    position: absolute;
+    background-size: 1800px 100%;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
 }
+
+.home_info {
+    background-color: rgba(255, 255, 255, 0.75);
+    margin-top: 20%;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 3px;
+    padding-bottom: 20px;
+}
+
+    .home_info > a {
+        width: 50%;
+        margin: 0 auto;
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: center;
+    }
+        .home_info > a:hover {
+            text-decoration: none;
+        }
+
+        .home_quote {
+            color: #282828;
+            font-family: 'Satisfy', cursive;
+            color: #328008;
+            font-size: 28px;
+            font-weight: 400;
+            line-height: 2;
+        }
+
+    .home_quote_2{
+        margin-left: 10%;
+    }
+
 
 body {
     font-family: Arial;
@@ -18,36 +51,24 @@ body {
     background-color: #f9f9f9;
 }
 
-.nav_bg_container {
-    height: 100px;
-    width: 100%;
-    position: absolute;
-    z-index: -2;
-    overflow: hidden;
-    padding:0px;
-}
-#nav_bg {
-    width: 100%;
-    height: 100px;
 
-
-}
 .main_container {
     margin-top: 0px;
-    min-height: calc(100vh - 130px);
+    min-height: calc(100vh - 150px);
 }
 
 nav {
-    height: 80px;
     color: #5e0909;
-    background-color: transparent !important;
-    background-image: none;
 }
 
 .navbar {
-    background-color: transparent !important;
+    border: none;
+    padding-top:8px;
+}
+
+.home_bg .navbar {
     background-image: none;
-    border:none;
+    background-color: transparent;
 }
 
 
@@ -63,14 +84,10 @@ nav {
 .navbar-default .navbar-brand:hover {
     color: #328008;
 }
-
-
-
 .header_contact {
     height: 15px;
     margin-right: 15px;
     margin-bottom:5px;
-    padding-top: 8px;
     color: #328008;
     display: block;
     text-align:right;
@@ -142,7 +159,6 @@ h1, h2, h3, h4 {
 
 footer {
     padding-top: 20px;
-    border-top: 1px solid #ededed;
     color: #A9A9A9;
     position: relative;
     bottom: 0px;
@@ -150,6 +166,14 @@ footer {
     text-align: center;
     vertical-align: middle;
     width: 100%;
+}
+
+.LinkedInLink  {
+    color: #328008;
+}
+
+.LinkedInLink:hover {
+    color: #328008;
 }
 
 .icon-bar {
@@ -257,8 +281,4 @@ table {
 
 #useDeviceLoc{
     margin-bottom:5px;
-}
-
-.home_main {
-
 }
