--- a/templates/base.html
+++ b/templates/base.html
@@ -16,51 +16,47 @@
 
 </head>
 <body>
-    <!-- Fixed masthead -->
-    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom">
-        <div class="container nav_bg_container">
-            <img id="nav_bg" src="{% static 'img/News-Header-1b.jpg' %}" alt="header" />
+    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom" style="background-image: url('{% static "img/News-Header-1b.jpg" %}'); background-size: 100% 100%;">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
+            </a>
         </div>
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">
-                    Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
-                </a>
-            </div>
-            <div class="header_contact">
-                <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
-                <a Target=”_blank” class="phone_link"href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'index' %}"><i class="fas fa-info"></i> About</a></li>
-                    <li><a href="{% url 'products' %}"><i class="fab fa-product-hunt"></i> Services</a></li>
-                    {% if user.is_authenticated %}
-                    {% if user.is_staff %}
-                    <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
-                    {% endif %}
-                    <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
-                    <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
-                    {%  else %}
-                    <li><a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i> Log In</a></li>
-                    {% endif %}
-                    <li>
-                        <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shopping-cart"></i> Cart
-                            {% if product_count > 0 %}
-                            <label class="bade badge-warning">{{ product_count }}</label>
-                            {% endif %}
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="header_contact">
+            <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
+            <a Target=”_blank” class="phone_link" href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{% url 'about' %}"><i class="fas fa-info"></i> About</a></li>
+                <li><a href="{% url 'products' %}"><i class="fas fa-vial"></i> Services</a></li>
+                {% if user.is_authenticated %}
+                {% if user.is_staff %}
+                <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
+                {% endif %}
+                <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
+                <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
+                {%  else %}
+                <li><a href="{% url 'login' %}"><i class="fa fa-sign-in-alt"></i> Log In</a></li>
+                {% endif %}
+                <li>
+                    <a href="{% url 'view_cart' %}">
+                        <i class="fa fa-shopping-cart"></i> Cart
+                        {% if product_count > 0 %}
+                        <label class="bade badge-warning">{{ product_count }}</label>
+                        {% endif %}
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     </nav>
     {% if messages %}
     <div class="alert alert-success">
@@ -76,7 +72,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>Developed by Dan Casey</p>
+            <p>Developed by <a class="LinkedInLink" href="https://www.linkedin.com/in/danielcaseyengineer/" target="_blank"><i class="fab fa-linkedin"></i> Dan Casey</a></p>
         </div>
     </footer>
 
@@ -86,4 +82,4 @@
     {% endblock head_js %}
 
 </body>
-</html>
+    </html>
